--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
+# TextMate #
+############
+*.tmproj
+*.tmproject
+tmtags
+
+# Sublime #
+###########
+*.sublime-workspace
+
+# Emacs #
+#########
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+.elc
+auto-save-list
+tramp
+.\#*
+.org-id-locations
+*_archive
+
+# Rails #
+#########
 *.rbc
 *.sassc
 .sass-cache
@@ -14,28 +39,62 @@ capybara-*.html
 **.orig
 rerun.txt
 pickle-email-*.html
+
+# Node #
+########
+lib-cov
+*.seed
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+pids
+logs
+results
+npm-debug.log
+
+# Meteor #
+##########
+.meteor/local
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
 .DS_Store
 .AppleDouble
 .LSOverride
 Icon
-
-
-# Thumbnails
 ._*
-
-# Files that might appear on external disk
 .Spotlight-V100
 .Trashes
-
-*~
-\#*\#
-/.emacs.desktop
-/.emacs.desktop.lock
-.elc
-auto-save-list
-tramp
-.\#*
-
-# Org-mode
-.org-id-locations
-*_archive
+ehthumbs.db
+Thumbs.db
+.settings.xml
